# mirothinker-service

./: MiroThinker-功能分析文档.md  add_debug_logging.sh  auto_fix.py  auto_fix_service.py  check_files.sh  check_files_http.py  check_server.py  check_webhook.sh  complete_deploy.sh  db_query_api.py  debug_server.py  deploy_and_verify.py  deploy_complete.py  deploy_feishu_fix.sh  deploy_fix.py  final_deploy.sh  fix_and_deploy.sh  fix_api.py  fix_bashrc.py  fix_import.sh  fix_script.py  fix_webhook_v2.py  force_deploy.sh  full_deploy.sh  http_fix_api.py  nginx_systemd_config.sh  pkb-fix.service  self_contained_fix.py  setup_debug_api.sh  ssh_via_script.py  temp_debug_api.py  test_feishu_webhook.py  verify_deploy.py  verify_server.py
mirothinker-service/: .dockerignore  .env.example  .gitignore  2核2G快速参考.md  2核2G适配方案.md  AGENTS.md  API配置指南.md  BRANCHING.md  CHANGELOG.md  DEPLOY.md  DOCUMENTATION_COMPARISON.md  Dockerfile  Makefile  MiroThinker_优化后完整方案_v3.md  PROJECT_CONFIG.md  PROJECT_REVIEW.md  PROJECT_TECH_DOC.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  Token优化总结.md  Token优化方案.md  Token优化速查.md  backup.sh  cloud-deploy.sh  deploy-2core-2g.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  iOS_App开发方案.md  nginx.conf  package-for-deploy.sh  production.env  pyproject.toml  上云准备检查清单.md  上云评估总结.md  云端部署清单.md  分析总结_速查.md  完整成本评估报告.md  完整技术方案与上云评估.md  (+11 more)
mirothinker-service/.github/workflows/: ci.yml
mirothinker-service/.miro/: config.json.example
mirothinker-service/backend/: main.py  requirements.txt  test_quality.py  test_quality_simple.py
mirothinker-service/backend/src/: __init__.py  (+1 more)
mirothinker-service/docs/: DEPLOY.md  DEPLOYMENT_GUIDE.md  api.md  architecture.md  implementation_verification.md  mirothinker_comparison_report.md
mirothinker-service/frontend/: diagnostic.html  index.html  test-button.html  修复说明.md
mirothinker-service/scripts/: backup.sh  check-deploy.sh  deploy-to-ecs.sh  deploy.sh  mirothinker-staging.service  mirothinker.service  setup.sh  start.sh  verify-deploy-dir.sh
(+99 files in other folders)
